I implemented the bottom Navigation menu, there are a few thing to  brush form the code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
         <item>Individual</item>
     </string-array>
     <string name="log_out">Log out</string>
+    <string name="new_transaction">new_transaction</string>
 </resources>
