Implementation of navigation between FilterTransaction and TransactionSummary. The object is passed using a try and Catch statement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="edit">Edit</string>
     <string name="close">Close</string>
     <string name="confirm">Confirm</string>
+    <string name="filter">Filter</string>
+    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
 </resources>
