--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="select_a_sub_category">Select a sub-Category</string>
     <string name="register_log_in">Register New Log In</string>
     <string name="change_password">Change Password</string>
+    <string name="budget">Budget: $ %1$.2f</string>
     <string-array name="roles">
         <item>Employee</item>
         <item>Manager</item>
