--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="zero_amount">Pleas, fill in the desired amount.</string>
     <string name="choose_picture">Choose Picture</string>
     <string name="delete">Delete</string>
+    <string name="change_pic">Change Picture</string>
     <string-array name="roles">
         <item>Employee</item>
         <item>Manager</item>
