--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,8 @@
     <string name="choose_picture">Choose Picture</string>
     <string name="delete">Delete</string>
     <string name="change_pic">Change Picture</string>
+    <string name="all_stakeholders">All Stakeholders</string>
+    <string name="select_stakeholder">Select StakeHolder</string>
     <string-array name="roles">
         <item>Employee</item>
         <item>Manager</item>
