--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
 
-    <string name="app_name">elContador 1.0</string>
+    <string name="Transaction_new">New Transaction</string>
+    <string name="Transaction_filter">Transaction Filter</string>
+    <string name="app_name">elContador </string>
     <string name="new_transaction_title">New Transaction</string>
     <string name="receive">Receive</string>
     <string name="amount">Amount</string>
@@ -79,10 +81,30 @@
     <string name="change_pic">Change Picture</string>
     <string name="all_stakeholders">All Stakeholders</string>
     <string name="select_stakeholder">Select StakeHolder</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log In</string>
+    <string name="textview">TextView</string>
+    <string name="role">Role:</string>
+    <string name="phone_number">Phone Number:</string>
+    <string name="email">Email:</string>
+    <string name="name">Name:</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="roles">Roles</string>
+    <string name="made_by">Made by:</string>
+    <string name="concerning">Concerning:</string>
+    <string name="category">Category:</string>
+    <string name="subcategory">Subcategory:</string>
+    <string name="date_and_time">Date and Time:</string>
+    <string name="notes">Notes:</string>
+    <string name="to_date">To</string>
+    <string name="From_date">From</string>
+    <string name="clear">Clear</string>
     <string-array name="roles">
-        <item>Employee</item>
-        <item>Manager</item>
-        <item>Owner</item>
-        <item>Tenant</item>
+        <item>Empleado</item>
+        <item>Administrador</item>
+        <item>Jefe</item>
+        <item>Arrendador</item>
     </string-array>
 </resources>
