Code is not working, Installing new log in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,9 @@
         <item>Jefe</item>
         <item>Arrendador</item>
     </string-array>
+    <string name="server_client_id">"120734524059-rh8lqcu7pttkflkno0feit0num873jk7.apps.googleusercontent.com"</string>
+    <string name="succesful_registration">Successful Registration to db</string>
+    <string name="unsuccesful_registration">Unsuccessful Registration to db</string>
+    <string name="Access_denied">Access denied for </string>
+
 </resources>
