LogIn Activity Exists

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,7 @@
     <string name="succesful_registration">Successful Registration to db</string>
     <string name="unsuccesful_registration">Unsuccessful Registration to db</string>
     <string name="Access_denied">Access denied for </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
