LogIn is working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,5 +122,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="askForPermission">Please ask for authorization to access</string>
     <string name="askForValidCompanyId">Please insert a valid Companie\'s Id</string>
+    <string name="noCompanyIdTyped">Please type the id of the Company</string>
+    <string name="accounts">Accounts</string>
 
 </resources>
