--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,5 +125,6 @@
     <string name="noCompanyIdTyped">Please type the id of the Company</string>
     <string name="accounts">Accounts</string>
     <string name="select_an_stakeholder">Select an Stakeholder</string>
+    <string name="error_finding_microAccount">error finding microAccount</string>
 
 </resources>
