--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,5 +126,6 @@
     <string name="accounts">Accounts</string>
     <string name="select_an_stakeholder">Select an Stakeholder</string>
     <string name="error_finding_microAccount">error finding microAccount</string>
+    <string name="select_micro_account">Select a micro-account</string>
 
 </resources>
