update UI new Transactions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="filter">Filter</string>
     <string name="dd_mm_yyyy">DD/MM/YYYY</string>
     <string name="pay_to">Pay to</string>
-    <string name="stakeholder">Stakeholders</string>
+    <string name="stakeholder">Micro-Account</string>
     <string name="additional_comments">Additional Comments</string>
     <string name="select_a_category">Select a category</string>
     <string name="select_a_sub_category">Select a sub-Category</string>
