--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="roles">Roles</string>
-    <string name="made_by">Made by:</string>
+    <string name="made_by">Registered by:</string>
     <string name="concerning">Concerning:</string>
     <string name="category">Category:</string>
     <string name="subcategory">Subcategory:</string>
