--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,5 +129,6 @@
     <string name="select_micro_account">Select a micro-account</string>
     <string name="search">Search</string>
     <string name="micro_accounts">Micro Accounts</string>
+    <string name="transaction_display">Transaction Display</string>
 
 </resources>
