Change application name and icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="Transaction_new">New Transaction</string>
     <string name="Transaction_filter">Transaction Filter</string>
-    <string name="app_name">elContador </string>
+    <string name="app_name">!A Caray¡</string>
     <string name="new_transaction_title">New Transaction</string>
     <string name="receive">Receive</string>
     <string name="amount">Amount</string>
