--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,5 +132,7 @@
     <string name="add_account">Add account</string>
     <string name="name_of_account">Name Of Account</string>
     <string name="starting_balance">Starting Balance ( Default $0.00 )</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
