--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,5 +134,7 @@
     <string name="starting_balance">Starting Balance ( Default $0.00 )</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="paid_to">Paid to</string>
+    <string name="title">Title</string>
 
 </resources>
