--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,5 +136,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="paid_to">Paid to</string>
     <string name="title">Title</string>
-
+    <string name="no_transactions">No transactions to show</string>
+    <string name="no_contracts">No contracts to show</string>
 </resources>
