--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,7 @@
     <string name="title">Title</string>
     <string name="no_transactions">No transactions to show</string>
     <string name="no_contracts">No contracts to show</string>
+    <string name="start">Start:</string>
+    <string name="end">End:</string>
+    <string name="frequency">Frequency:</string>
 </resources>
