--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,4 +3,6 @@
     <string name="start">Start:</string>
     <string name="end">End:</string>
     <string name="frequency">Frequency:</string>
+    <string name="made_date">Registered date:</string>
+    <string name="payments">Payments:</string>
 </resources>
