--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,4 +5,5 @@
     <string name="frequency">Frequency:</string>
     <string name="made_date">Registered date:</string>
     <string name="payments">Payments:</string>
+    <string name="cancel">Cancel</string>
 </resources>
