--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,5 +143,8 @@
     <string name="custom_categories">Custom Categories</string>
     <string name="edit_categories">Edit Categories</string>
     <string name="add_new_category">Add New Category</string>
+    <string name="custom_category">Custom Category</string>
+    <string name="category_name">Category Name</string>
+    <string name="category_icon">Category Icon</string>
 
 </resources>
