--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,5 +146,6 @@
     <string name="custom_category">Custom Category</string>
     <string name="category_name">Category Name</string>
     <string name="category_icon">Category Icon</string>
+    <string name="invalid_icon_please_enter_an_emoji">Invalid Icon, please enter an emoji</string>
 
 </resources>
