--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,6 +146,10 @@
     <string name="custom_category">Custom Category</string>
     <string name="category_name">Category Name</string>
     <string name="category_icon">Category Icon</string>
-    <string name="invalid_icon_please_enter_an_emoji">Invalid Icon, please enter an emoji</string>
+    <string name="invalid_icon_please_enter_an_emoji">Invalid Icon, please enter an emoji.</string>
+    <string name="this_field_is_requiered">This field is required.</string>
+    <string name="editing_custom_category">Editing Category</string>
+    <string name="add_new_cat">Add New Category</string>
+    <string name="dismiss">Dismiss</string>
 
 </resources>
