--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,7 +145,7 @@
     <string name="add_new_category">Add New Category</string>
     <string name="custom_category">Custom Category</string>
     <string name="category_name">Category Name</string>
-    <string name="category_icon">Category Icon</string>
+    <string name="category_icon">Category emoji</string>
     <string name="invalid_icon_please_enter_an_emoji">Invalid Icon, please enter an emoji.</string>
     <string name="this_field_is_requiered">This field is required.</string>
     <string name="editing_custom_category">Editing Category</string>
