--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="new_transaction_title">New Transaction</string>
     <string name="receive">Receive</string>
     <string name="amount">Amount</string>
-    <string name="paid_by">Paid by</string>
+    <string name="paid_by">Paid by </string>
     <string name="comments">Comments</string>
     <string name="comments_hint">Comments</string>
     <string name="submit">Submit</string>
@@ -134,7 +134,7 @@
     <string name="starting_balance">Starting Balance ( Default $0.00 )</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="paid_to">Paid to</string>
+    <string name="paid_to">Paid to </string>
     <string name="title">Title</string>
     <string name="words_">\"Words: \"</string>
     <string name="choose_category">Choose a Category</string>
@@ -155,6 +155,8 @@
     <string name="balance">BALANCE</string>
     <string name="error_loading">Error Loading...</string>
     <string name="add_custom_category">Add Custom Category</string>
+    <string name="time">Time:</string>
+    <string name="date">Date:</string>
 
 
 </resources>
