--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,4 +6,5 @@
     <string name="made_date">Registered date:</string>
     <string name="payments">Payments:</string>
     <string name="cancel">Cancel</string>
+    <string name="out">Rent</string>
 </resources>
