--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,4 +7,11 @@
     <string name="payments">Payments:</string>
     <string name="cancel">Cancel</string>
     <string name="out">Rent</string>
+    <string name="duration">Duration</string>
+    <string name="payments_left">Payments left:</string>
+    <string name="next_payment">Next payment:</string>
+    <string name="please_fill_in_duration">Please fill in duration</string>
+    <string name="select_frequency">Please select frequency</string>
+    <string name="number_of_payments">Number of payments</string>
+    <string name="date_before_error">Date chosen is before today</string>
 </resources>
