--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,7 +140,7 @@
     <string name="end">End:</string>
     <string name="frequency">Frequency</string>
     <string name="made_date">Registered date:</string>
-    <string name="payments">Payments:</string>
+    <string name="subContracts">Payments:</string>
     <string name="cancel">Cancel</string>
     <string name="in">In</string>
     <string name="out">Out</string>
@@ -183,15 +183,15 @@
     <string name="date">Date:</string>
     <string name="duration">Duration</string>
     <string name="payments_left">Payments left:</string>
-    <string name="next_payment">Next payment:</string>
+    <string name="next_payment">Next subContract:</string>
     <string name="please_fill_in_duration">Please fill in duration</string>
     <string name="select_starting_date">Please select starting date</string>
-    <string name="error_no_payments_can_be_made">ERROR: No payments can be made during these dates</string>
+    <string name="error_no_payments_can_be_made">ERROR: No subContracts can be made during these dates</string>
     <string name="every">Every </string>
     <string name="select_frequency">Please select frequency</string>
-    <string name="number_of_payments">Number of payments</string>
+    <string name="number_of_payments">Number of subContracts</string>
     <string name="date_before_error">Date chosen is before today</string>
-    <string name="error_period">ERROR: the last payment is not a full period. Please use a lower unit of time for the duration.</string>
+    <string name="error_period">ERROR: the last subContract is not a full period. Please use a lower unit of time for the duration.</string>
     <string name="camara_permission_denied">Camara permission is required to use the camara</string>
     <string name="upload_failed">Upload has failed</string>
     <string name="image_uploaded">Image Uploaded</string>
