updated filter with checkboxes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,6 +210,8 @@
     <string name="stakeholdersPlural">Stakeholders</string>
     <string name="month">Month</string>
     <string name="year">Year</string>
+    <string name="receivables">Receivables</string>
+    <string name="payables">Payables</string>
     <string-array name="months_list">
         <item>January</item>
         <item>February</item>
