--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,6 +227,9 @@
     <string name="fully_paid">This transaction is fully paid.</string>
     <string name="check_errors">Please check for errors.</string>
     <string name="deleted_transactions">Deleted Transactions</string>
+    <string name="share_with_other_people">Share with other people</string>
+    <string name="starting_balanace_title">Starting balanace</string>
+    <string name="name_of_account_title">Name of account:</string>
 
     <string-array name="months_list">
         <item>January</item>
