--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,6 +232,7 @@
     <string name="name_of_account_title">Name of account:</string>
     <string name="new_participant_s_email">New participant\'s email...</string>
     <string name="add">Add</string>
+    <string name="account_settings">Account Settings</string>
 
     <string-array name="months_list">
         <item>January</item>
