--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,6 +233,7 @@
     <string name="new_participant_s_email">New participant\'s email...</string>
     <string name="add">Add</string>
     <string name="account_settings">Account Settings</string>
+    <string name="please_insert_a_valid_email">Please, insert a valid email.</string>
 
     <string-array name="months_list">
         <item>January</item>
